Test with AdoptOpenJDK 11 Hotspot on macOS